<resources>
    <string name="app_name">LOL_Deliver</string>
    <string name="hint_nameInput">名字：</string>
    <string name="hint_eMailInput">電子信箱：</string>
    <string name="hint_pswdInput">密碼：</string>
    <string name="hint_pswd2Input">確認密碼：</string>
    <string name="hint_telInput">電話：</string>
    <string name="hint_addressInput">地址：</string>
    <string name="button_regist">註冊</string>
</resources>